[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphs_project"
version = "0.1.0"
description = "Uma biblioteca Python para manipulação de grafos"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Eduardo Henrique", email = "eduardo.henriquems@gmail.com" },
    { name = "Roberta Sophia", email = "roberta.silva@sga.pucminas.br" },
]

[project.scripts]
graphs-cli = "graphs_project.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/graphs_project"]

[dependency-groups]
dev = [
]

[tool.ruff]
line-length = 100
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # type annotations
    "RUF"  # ruff-specific
]
fixable = ["ALL"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true